// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Astronaut: Represents an astronaut with personal information.
AstronautMission: Junction table linking astronauts to missions.
Mission: Represents a space mission including its details.
AstronautSkill: Represents skills possessed by astronauts.
AstronautTraining: Represents training sessions attended by astronauts.
Cargo: Represents cargo carried by missions.
LaunchFacility: Represents facilities used by spaceports for launches.
Spaceport: Represents a spaceport with basic information.
MissionOutcome: Represents the outcomes of a mission.
MissionSpaceAgency: Junction table linking missions to space agencies.
SpaceAgency: Represents a space agency overseeing missions.
Spacecraft: Represents a spacecraft with its specifications.
'''
}

Table Astronaut {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    birth_date DATE 
    missions_count INTEGER 
    }

Table AstronautMission {
    id INTEGER [primary key]
    astronaut_id INTEGER 
    mission_id INTEGER 
    }

Table Mission {
    id INTEGER [primary key]
    name VARCHAR 
    launch_date DATE 
    return_date DATE 
    spaceport_id INTEGER 
    }

Table AstronautSkill {
    id INTEGER [primary key]
    skill_name VARCHAR 
    level INTEGER 
    astronaut_id INTEGER 
    }

Table AstronautTraining {
    id INTEGER [primary key]
    session_date DATE 
    location VARCHAR 
    astronaut_id INTEGER 
    }

Table Cargo {
    id INTEGER [primary key]
    weight INTEGER 
    content_description VARCHAR 
    mission_id INTEGER 
    }

Table LaunchFacility {
    id INTEGER [primary key]
    name VARCHAR 
    capacity INTEGER 
    spaceport_id INTEGER 
    }

Table Spaceport {
    id INTEGER [primary key]
    name VARCHAR 
    location VARCHAR 
    }

Table MissionOutcome {
    id INTEGER [primary key]
    mission_id INTEGER 
    outcome VARCHAR 
    details VARCHAR 
    }

Table MissionSpaceAgency {
    id INTEGER [primary key]
    mission_id INTEGER 
    space_agency_id INTEGER 
    }

Table SpaceAgency {
    id INTEGER [primary key]
    name VARCHAR 
    country VARCHAR 
    }

Table Spacecraft {
    id INTEGER [primary key]
    model VARCHAR 
    crew_capacity INTEGER 
    current_mission_id INTEGER 
    }



// Relationships
    Ref: AstronautMission.(astronaut_id) < Astronaut.(id)
    Ref: AstronautMission.(mission_id) < Mission.(id)
    Ref: Mission.(spaceport_id) < Spaceport.(id)
    Ref: AstronautSkill.(astronaut_id) < Astronaut.(id)
    Ref: AstronautTraining.(astronaut_id) < Astronaut.(id)
    Ref: Cargo.(mission_id) < Mission.(id)
    Ref: LaunchFacility.(spaceport_id) < Spaceport.(id)
    Ref: MissionOutcome.(mission_id) < Mission.(id)
    Ref: MissionSpaceAgency.(mission_id) < Mission.(id)
    Ref: MissionSpaceAgency.(space_agency_id) < SpaceAgency.(id)
    Ref: Spacecraft.(current_mission_id) < Mission.(id)
